--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("./reset.css");
 
 @import url("https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap");
-@import url("../node_modules/font-awesome/css/font-awesome.min.css");
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 @import url("./sections/intro.css");
 @import url("./sections/adolphe.css");
