--- a/css/sections/verticalScroll.css
+++ b/css/sections/verticalScroll.css
@@ -30,7 +30,7 @@
 }
 
 .fixed__date__text {
-  z-index: 1;
+  z-index: 999;
 }
 
 .container__sideText {
@@ -72,6 +72,10 @@
 }
 .date__text {
   font-size: 20vw;
+}
+
+.last18 {
+  opacity: 0;
 }
 
 /* Ipad version */
